Donation small fixes

--- a/static/global/sass/mixins/_utilities.scss
+++ b/static/global/sass/mixins/_utilities.scss
@@ -12,12 +12,13 @@
         display: none;
         z-index: 5;
         position: absolute;
-        top: -10px;
-        right: -10px;
+        top: -30px;
+        right: -30px;
         @include rem(font-size, 20px);
+        padding: 20px;
         color: $grayDarker;
         &:hover {
-            color: $black;
+            color: $pink;
         }
         &:active {
             color: $pink;
